<resources>
    <string name="app_name">Chalk Talk</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="login_alert_user_and_pass">Please enter email and password</string>
    <string name="loading">Please Wait...</string>
    <string name="defaultError">Invalid Username or Password</string>
    <string name="network_unavailble">Network Not Available</string>

    <string name="action_logout">Logout</string>
    <string name="action_notification">Notifications</string>
    <string name="action_translate">Translate</string>
    <string name="action_translate_hindi">Hindi</string>
    <string name="action_translate_marathi">Marathi</string>
    <string name="desc">image view</string>
    <string name="listItemTitle">List Item Title</string>
    <string name="copyright">© Splashpapers LLP</string>
    <string name="login">LOGIN</string>
    <string name="backloginbutton">BACK TO LOGIN</string>
    <string name="send">SEND</string>
    <string name="confirm">CONFIRM</string>
    <string name="signIn">Sign In</string>
    <string name="resetheading">Good To See You!</string>
    <string name="headingText2">Since you logged in first time,Please reset \n your password</string>
    <string name="headingText3">your password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile Number / Email id</string>
    <string name="child_list">Child list</string>
    <string name="title_about_us">About us</string>
    <string name="title_activity_home">DASHBOARD</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="date">Date</string>
    <string name="totalStudent">Total student</string>
    <string name="totalTeacher">Total teacher</string>
    <string name="totalParent">Total parent</string>
    <string name="attendance">Attendance</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="enterEmail">Enter your email address</string>
    <string name="resetPassword">Submit</string>
    <string name="title_activity_user_list">User List</string>
    <string name="usertype">User Type</string>
    <string name="classname">Class name</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="title_activity_student_profile">Student Profile</string>
    <string name="studentProfile">Profile</string>
    <string name="studentMarks">Marks</string>
    <string name="title_activity_subjects">Subjects</string>
    <string name="subjects">Subjects</string>
    <string name="title_activity_class_routine">Time Table</string>
    <string name="classRoutine">Class Routine</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="dash">-</string>
    <string name="title_homework">Home work</string>
    <string name="title_activity_attendance">Attendance</string>
    <string name="view">View</string>
    <string name="fromDate">From date</string>
    <string name="toDate">To date</string>
    <string name="title_activity_exam_marks">Exam Marks</string>
    <string name="examMarks">Exam Marks</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_activity_accounting">Accounting</string>
    <string name="accounting">Accounting</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="manageProfile">Manage profile</string>
    <string name="changePassword">Change password</string>
    <string name="name">Name</string>
    <string name="title_food_timetable">Food schedule</string>
    <string name="title_activity_noticeboard">Noticeboard</string>
    <string name="title_activity_calendar">Event calendar</string>
    <string name="title_activity_notice_detail">Notice</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="eventCalendar">Event calendar</string>
    <string name="eventPageBottomHint">Tap on a highlighted day to view event details</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="currentPassword">Current password</string>
    <string name="newPassword">New password</string>
    <string name="confirmNewPassword">Confirm new password</string>
    <string name="title_activity_student_accounting">Student Accounting</string>
    <string name="title_activity_student_exam_marks">Student Exam Marks</string>
    <string name="updateImage">Update image</string>
    <string name="updateImageDone">Update</string>
    <string name="updateImageCancel">Cancel</string>
    <string name="title_child_list">Child List</string>
    <string name="gcm_defaultSenderId1">258847324936</string>
    <string name="no_attendance">Attendance not uploaded</string>
    <string name="no_routine">Class routine not uploaded</string>
    <string name="no_food_schedule">Food schedule not uploaded</string>
    <string name="no_homework">No homework</string>
    <string name="no_notification">No notifications</string>

    <string name="remember">Remember me</string>
    <string name="spinner_title">Select Students</string>
    <string name="spinner_month"> 1 MONTH</string>
    <string name="apply">APPLY LEAVE</string>
    <string name="spinner_status">ALL</string>
    <string name="absent">Was Absent!</string>
    <string name="absent_date">18th september</string>
    <string name="absent_button">ADD REASON</string>
    <string name="period">PERIOD</string>
    <string name="present">Was Present</string>
    <string name="projects">SORT BY</string>
    <string name="deadline">DEADLINE:</string>
    <string name="total_text">TOTAL</string>
    <string name="present_text">PRESENT</string>
    <string name="absent_text">ABSENT</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="no_homework_text">No Homework!</string>
    <string name="connection_error_text">Connection Error!</string>

    <string name="Monday">MON</string>
    <string name="Tuesday">TUE</string>
    <string name="Wed">WED</string>
    <string name="THU">THU</string>
    <string name="FRi">FRI</string>
    <string name="Sat">SAT</string>


    <string name="all_prompt">ALL</string>

    <string-array name="student_all_array">
        <item>All</item>
        <item>Present</item>
        <item>Absent</item>
    </string-array>

    <string name="notif_empty_list">Empty</string>
    <string name="notif_tab1">VIEW NOTIFICATIONS</string>
    <string name="notif_tab2">SET ALERT</string>

    <string name="period_prompt">Select Period</string>
    <string name="profile_heading">ACCOUNT PREFERENCE</string>
    <string name="profile_notification">Notification Settings</string>
    <string name="profile_name">Name</string>
    <string name="profile_mobileNumber">Mobile No</string>
    <string name="profile_emailID">EmailID</string>
    <string name="profile_addressTxt">Address</string>
    <string name="profile_changePassword">CHANGE PASSWORD</string>
    <string name="profile_bottom_text">MY KIDS</string>
    <string name="profile_className">Class</string>
    <string name="profile_division">Division</string>
    <string name="profile_rollNo">RollNo</string>
    <string name="profile_grNo">GR No</string>
    <string name="attendance_reasonForAbsence">REASON FOR ABSENCE</string>
    <string name="attendance_name">Name</string>
    <string name="attendance_period">Period</string>
    <string name="attendance_reason">Reason for Absence</string>
    <string name="submit">SUBMIT</string>
    <string name="attendance_reasonForLeave">REASON FOR LEAVE</string>
    <string name="submission">SUBMISSION :</string>

    <string-array name="student_period_array">
        <item>Today</item>
        <item>1 Week</item>
        <item>1 Month</item>
    </string-array>


</resources>
