<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:padding="30dp"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="30">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chalk_talk"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:drawableLeft="@drawable/login_userid"
            android:drawablePadding="10dp"
            android:hint="@string/mobile"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:drawableLeft="@drawable/forgot_password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/remember_me_check_box"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:button="@drawable/checkbox_selector"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/remember"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <TextView
                android:id="@+id/forget_txt_view"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/forgotPassword"
                android:textColor="#0d4e93"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"/>
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:id="@+id/login_btn"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/login_btn"
            android:fontFamily="monospace"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="bottom">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/copyright"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>