<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/backloginbutton"
            android:drawableLeft="@drawable/back"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginTop="30dp"/>

    </LinearLayout>



<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:weightSum="100">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="30">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chalk_talk"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:padding="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:drawableLeft="@drawable/login_userid"
            android:drawablePadding="10dp"
            android:hint="@string/mobile"/>



        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/login_btn"
            android:text="@string/send"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@drawable/login_btn"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:fontFamily="monospace"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="bottom">

    </LinearLayout>

    </LinearLayout>
</LinearLayout>